--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "preentrega1palombapetroff",
   "version": "1.0.0",
   "main": "src/server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "node --watch src/server.js"
   },
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1"
   }
 }
